checker/tests/parsing/errors/option_at_without_var.mft
fn f {
  operand X;
  options {
    a @ : A;
  }
  returns Y;
}
=== error ===
Unrecognized token `:` found at 40:41
Expected one of "variable"